000-LA/CP Fix status icon vertical alignment

--- a/static/sass/components/table.scss
+++ b/static/sass/components/table.scss
@@ -20,6 +20,12 @@
   td,
   th {
     padding: .25rem 1rem;
+
+    img {
+      display: block;
+      margin: 0 auto;
+    }
+
   }
 
   &_status-icon {
